tests/errors/test-member-init-inherited-member.script

class A
{
  int n;
  A() = default;
};

class B : A
{
  B() : n(0) { }
};

//>10:9: error C6: cannot initialize inherited data member n
